# Symbolic-math-HaTeX

./: .gitignore  EXAMPLES.md  EXAMPLES_ASCII.md  HaTeX_SymMath_test0.hs  Makefile  README.md  TeX-my-math.cabal  shorttest0.hs  stack.yaml
CAS/Dumb/LaTeX/: Symbols.hs
Data/: Chain.hs
Data/Complex/: Class.hs
Data/Functor/: FixedLength.hs
Data/HList/: BasedUpon.hs
Data/List/: NonEmpty.hs
Math/LaTeX/: Config.hs  Prelude.hs  RendConfig.hs  StringLiterals.hs  TextMarkup.hs  VoidCalc.hs
Math/LaTeX/Internal/: Display.hs  MathExpr.hs  OperatorGenerator.hs  RendMonad.hs
Math/LaTeX/Internal/Misc/: BracketSizes.hs
example/: Simple.hs
shorttest0/: shorttest0.tex
test/PdfSnippets/: LaTeXComparer.hs  MkSnippets.hs
test/tasty/: test.hs
